Requirement 3: "As a reader, upon returning a book, I went to recommend it (positively or negatively)."